--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "animejs": "^2.2.0",
+    "axios": "^0.18.0",
     "detectrtc": "^1.3.5",
     "p2": "^0.7.1",
     "phaser": "^3.2.1",
